--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,14 @@
         android:theme="@style/Theme.Quizzi"
         tools:targetApi="31">
         <activity
-            android:name=".views.MainActivity"
-            android:exported="true">
+            android:name=".views.RecommendAuthorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.DiscoveryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.RecommendUserActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
