--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:theme="@style/Theme.Quizzi"
         tools:targetApi="31">
         <activity
+            android:name=".views.MyStatisticActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityMyStatistic"
+            android:exported="false"
+            android:theme="@style/Theme.Quizzi" />
+        <activity
+            android:name=".views.FollowActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.MainActivity"
             android:exported="true">
             <intent-filter>
