--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -106,6 +111,12 @@
             android:exported="false" />
         <activity
             android:name=".views.UI_40_generate_qr"
+            android:exported="false" />
+        <activity
+            android:name=".views.CreateQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.QuizCreate.after.QuizCreateActivity"
             android:exported="false" />
     </application>
 
