fix ui author details fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name=".views.AboutQuizzoActivity"
             android:exported="false" />
         <activity
-            android:name=".views.AuthorDetailsAboutActivity"
+            android:name=".views.AuthorDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".views.AuthorDetailsCollections"
